feat: roulette feat
